--- a/WzVisualizer/GUI/MainForm.zh-TW.resx
+++ b/WzVisualizer/GUI/MainForm.zh-TW.resx
@@ -117,68 +117,109 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BadEncryption" xml:space="preserve">
-    <value>Failed to parse the WZ file. Perhaps the wrong WZ encryption is being used?</value>
+  <data name="exportButton.Text" xml:space="preserve">
+    <value>提取圖片</value>
   </data>
-  <data name="GameFilesNotFound" xml:space="preserve">
-    <value>Failed to find game data. Please make sure your folder selection is correct.</value>
+  <data name="loadButton.Text" xml:space="preserve">
+    <value>載入</value>
   </data>
-  <data name="Error" xml:space="preserve">
-    <value>Error</value>
+  <data name="saveButton.Text" xml:space="preserve">
+    <value>儲存</value>
   </data>
-  <data name="FileNotFound" xml:space="preserve">
-    <value>File Not Found</value>
+  <data name="searchButton.Text" xml:space="preserve">
+    <value>搜尋</value>
   </data>
-  <data name="CompleteSaveBIN" xml:space="preserve">
-    <value>Binary files successfully saved</value>
+  <data name="TabCashPage.Text" xml:space="preserve">
+    <value>特殊</value>
   </data>
-  <data name="CompleteSaveImages" xml:space="preserve">
-    <value>Images successfully saved</value>
+  <data name="TabEAccessory.Text" xml:space="preserve">
+    <value>飾品</value>
   </data>
-  <data name="FileExtensionWZ" xml:space="preserve">
-    <value>.wz</value>
+  <data name="TabEBottoms.Text" xml:space="preserve">
+    <value>褲子</value>
   </data>
-  <data name="MassReadWarning" xml:space="preserve">
-    <value>You have opted to load every tab. Are you sure you want to do this?</value>
+  <data name="TabECapes.Text" xml:space="preserve">
+    <value>披風</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="MissingIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\missingno.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TabECaps.Text" xml:space="preserve">
+    <value>帽子</value>
   </data>
-  <data name="ErrorProcessing" xml:space="preserve">
-    <value>Failed to process data ({0}): {1}</value>
+  <data name="TabEFaces.Text" xml:space="preserve">
+    <value>臉型</value>
   </data>
-  <data name="MassWriteWarning" xml:space="preserve">
-    <value>You have opted to save every tab. Are you sure you want to do this?</value>
+  <data name="TabEGloves.Text" xml:space="preserve">
+    <value>眼鏡</value>
   </data>
-  <data name="Warning" xml:space="preserve">
-    <value>Warning</value>
+  <data name="TabEHairs.Text" xml:space="preserve">
+    <value>髮型</value>
   </data>
-  <data name="SaveComplete" xml:space="preserve">
-    <value>Save Complete</value>
+  <data name="TabEOveralls.Text" xml:space="preserve">
+    <value>套裝</value>
   </data>
-  <data name="SaveAll" xml:space="preserve">
-    <value>Save All</value>
+  <data name="TabEquipsPage.Text" xml:space="preserve">
+    <value>裝備</value>
   </data>
-  <data name="Save" xml:space="preserve">
-    <value>Save</value>
+  <data name="TabERings.Text" xml:space="preserve">
+    <value>戒指</value>
   </data>
-  <data name="LoadAll" xml:space="preserve">
-    <value>Load All</value>
+  <data name="TabEShields.Text" xml:space="preserve">
+    <value>盾牌</value>
   </data>
-  <data name="Options" xml:space="preserve">
-    <value>Options</value>
+  <data name="TabEShoes.Text" xml:space="preserve">
+    <value>鞋子</value>
   </data>
-  <data name="Load" xml:space="preserve">
-    <value>Load</value>
+  <data name="TabETames.Text" xml:space="preserve">
+    <value>騎寵</value>
   </data>
-  <data name="Search" xml:space="preserve">
-    <value>Search</value>
+  <data name="TabEtcPage.Text" xml:space="preserve">
+    <value>其它</value>
   </data>
-  <data name="ExportFolder" xml:space="preserve">
-    <value>exports</value>
+  <data name="TabETops.Text" xml:space="preserve">
+    <value>上衣</value>
   </data>
-  <data name="ImagesFolder" xml:space="preserve">
-    <value>images</value>
+  <data name="TabMapsPage.Text" xml:space="preserve">
+    <value>地圖</value>
+  </data>
+  <data name="TabMobsPage.Text" xml:space="preserve">
+    <value>怪物</value>
+  </data>
+  <data name="TabNPCsPage.Text" xml:space="preserve">
+    <value>NPC</value>
+  </data>
+  <data name="TabPetsPage.Text" xml:space="preserve">
+    <value>寵物</value>
+  </data>
+  <data name="TabReactors.Text" xml:space="preserve">
+    <value>反應物</value>
+  </data>
+  <data name="TabSChairs.Text" xml:space="preserve">
+    <value>椅子</value>
+  </data>
+  <data name="TabSetupPage.Text" xml:space="preserve">
+    <value>設置</value>
+  </data>
+  <data name="TabsEWeapons.Text" xml:space="preserve">
+    <value>武器</value>
+  </data>
+  <data name="TabSkillsPage.Text" xml:space="preserve">
+    <value>技能</value>
+  </data>
+  <data name="TabSOther.Text" xml:space="preserve">
+    <value>其他</value>
+  </data>
+  <data name="TabUConsumes.Text" xml:space="preserve">
+    <value>消耗</value>
+  </data>
+  <data name="TabUProjectiles.Text" xml:space="preserve">
+    <value>投擲物</value>
+  </data>
+  <data name="TabUScrolls.Text" xml:space="preserve">
+    <value>卷軸</value>
+  </data>
+  <data name="TabUsePage.Text" xml:space="preserve">
+    <value>消耗</value>
+  </data>
+  <data name="wzPathLabel.Text" xml:space="preserve">
+    <value>資料夾</value>
   </data>
 </root>
